Add helpers for removing assertions, Google formatting.